--- a/style.css
+++ b/style.css
@@ -208,13 +208,14 @@ section {
   gap: 5rem;
   height: 80vh;
   overflow: visible;
+  padding-top: 50px;
 }
 
 .section__pic-container {
   display: flex;
   height: 200px;
   width: 150px;
-  margin: auto 0;
+  margin: 100px auto 0;
 }
 
 .section__text {
